--- a/cli.cabal
+++ b/cli.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.31.1.
+-- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: bf0a618f8bd90a826dbcb6f5911cf0add6644863cb2148d8ecc6ae2e07938567
+-- hash: 3cc13c3c2f38d21326050528f39e564451fc114324addb5c28ab3c1484176bbb
 
 name:           cli
 version:        0.2.0
@@ -33,8 +33,11 @@ library
       Console.Options.Types
       Console.Options.Utils
   hs-source-dirs:
-      ./.
-  default-extensions: TypeFamilies DataKinds OverloadedStrings
+      ./
+  default-extensions:
+      TypeFamilies
+      DataKinds
+      OverloadedStrings
   build-depends:
       base >0 && <10
     , basement
@@ -47,7 +50,10 @@ executable example
       Paths_cli
   hs-source-dirs:
       examples/
-  default-extensions: TypeFamilies DataKinds OverloadedStrings
+  default-extensions:
+      TypeFamilies
+      DataKinds
+      OverloadedStrings
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >0 && <10
